--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "imuduino-ble",
   "version": "0.0.0",
   "description": "A library for connecting to the IMUduino with node/IO and BLE.",
-  "main": "index.js",
+  "main": "lib/imuduino-ble.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
